# OS-Wet3

./: README.md  minor_change
freetest/: CMakeLists.txt  a.out  main.c  mkinput  quick.c  test
webserver-files/: Makefile  Queue.c  Queue.h  client  kills.sh  output.c  output.cgi  rand.sh  request.c  request.h  segel.c  segel.h  server  server.c  sht.sh  tmp1  tmp3
webserver-files/gurtests/: server_tests.py
webserver-files/public/: myoutput.cgi  output.cgi
webserver-files/shtests/: kills.sh
webserver-files/tests/: README.TXT
webserver-files/tmp/: tmp1  tmp13  tmp15  tmp17  tmp2  tmp3  tmp4  tmp5  tmp6  tmp7
